# aoc2025

./: .gitignore  LICENSE  aoc2025.cabal
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs  SMT.hs
day11/: Main.hs
day12/: Main.hs
lib/: Geometry.hs  ReadInput.hs
