cabal-version:      3.4
name:               aoc2025
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Hai Zhu
maintainer:         halleyzhu@gmail.com
build-type:         Simple
data-files:         inputs/*.txt

common warnings
    ghc-options: -Wall
    default-extensions: NegativeLiterals
                      , OverloadedStrings
                      , RecordWildCards

library
    import:           warnings
    exposed-modules:  ReadInput, Geometry
    other-modules:    Paths_aoc2025
    autogen-modules:  Paths_aoc2025
    build-depends:    base ^>=4.21.0.0
                    , bytestring
                    , massiv
                    , megaparsec
                    , text
    hs-source-dirs:   lib
    default-language: GHC2024

executable day01
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , megaparsec
    hs-source-dirs:   day01
    default-language: GHC2024

executable day02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , containers
                    , megaparsec
    hs-source-dirs:   day02
    default-language: GHC2024

executable day03
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , text
                    , vector
    hs-source-dirs:   day03
    default-language: GHC2024

executable day04
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , massiv
    hs-source-dirs:   day04
    default-language: GHC2024

executable day05
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , containers
                    , megaparsec
    hs-source-dirs:   day05
    default-language: GHC2024

executable day06
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , massiv
    hs-source-dirs:   day06
    default-language: GHC2024

executable day07
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , containers
                    , massiv
    hs-source-dirs:   day07
    default-language: GHC2024

executable day08
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , equivalence
                    , megaparsec
                    , vector
    hs-source-dirs:   day08
    default-language: GHC2024

executable day09
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , megaparsec
    hs-source-dirs:   day09
    default-language: GHC2024

executable day10
    import:           warnings
    main-is:          Main.hs
    other-modules:    SMT
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , megaparsec
                    , process
    hs-source-dirs:   day10
    default-language: GHC2024

executable day11
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , megaparsec
                    , text
                    , unordered-containers
    hs-source-dirs:   day11
    default-language: GHC2024

executable day12
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , aoc2025
                    , foldl
                    , megaparsec
    hs-source-dirs:   day12
    default-language: GHC2024
